--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/aloknecessary/react-progress-stepper-ts.git"
+    "url": "git+https://github.com/aloknecessary/react-progress-stepper-ts.git"
   },
   "dependencies": {
     "styled-components": "^5.3.0"
