--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "homepage": "https://github.com/aloknecessary/react-progress-stepper-ts.git",
   "name": "react-progress-stepper-ts",
   "main": "dist/index.js",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "private": false,
   "files": [
     "dist",
@@ -22,7 +22,6 @@
     "eject": "react-scripts eject",
     "storybook": "storybook dev -p 6006",
     "clean": "rimraf dist",
-    "compile": "npm run clean && cross-env NODE_ENV=production babel src --out-dir dist --copy-files --ignore __tests__,spec.js,test.js,stories.js,__snapshots__",
     "predeploy": "npm run build-storybook",
     "deploy-storybook": "gh-pages -d storybook-static",
     "build-storybook": "storybook build"
@@ -87,5 +86,15 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1"
-  }
+  },
+  "keywords": [
+    "react",
+    "react-stepper",
+    "react-form-stepper",
+    "react-progress-stepper",
+    "react-form-stepper-vertical",
+    "react-form-stepper-horizontal",
+    "react-step",
+    "react-vertical-stepper"
+  ]
 }
