--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "homepage": "https://github.com/aloknecessary/react-progress-stepper-ts.git",
   "name": "react-progress-stepper-ts",
-  "main": "dist/index.js",
-  "version": "1.0.1",
+  "main": "dist/index",
+  "types": "dist/index",
+  "version": "1.0.3",
   "private": false,
   "files": [
     "dist",
@@ -19,7 +20,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "copy-font": "shx cp -r src\\assets\\fonts\\montserrat.ttf  dist\\assets\\fonts",
-    "compile": "npm run clean && cross-env NODE_ENV=production babel src --ignore src/stories --out-dir dist && npm run copy-font",
+    "copy-spec": "shx cp -r src\\*.d.ts  dist",
+    "compile": "npm run clean && cross-env NODE_ENV=production babel src --ignore src/stories --out-dir dist && npm run copy-font && npm run copy-spec",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "storybook dev -p 6006",
@@ -64,6 +66,7 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/preset-env": "^7.23.7",
     "@babel/preset-react": "^7.23.3",
+    "@babel/preset-typescript": "^7.23.3",
     "@storybook/addon-essentials": "^7.6.7",
     "@storybook/addon-interactions": "^7.6.7",
     "@storybook/addon-links": "^7.6.7",
@@ -99,6 +102,7 @@
     "react-form-stepper-vertical",
     "react-form-stepper-horizontal",
     "react-step",
-    "react-vertical-stepper"
+    "react-vertical-stepper",
+    "stepper"
   ]
 }
