upgraded project to typescript
removed all js files

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "name": "react-progress-stepper-ts",
   "main": "dist/index",
   "types": "dist/index",
-  "version": "1.0.3",
+  "version": "2.0.0",
   "private": false,
   "files": [
     "dist",
@@ -20,8 +20,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "copy-font": "shx cp -r src\\assets\\fonts\\montserrat.ttf  dist\\assets\\fonts",
-    "copy-spec": "shx cp -r src\\*.d.ts  dist",
-    "compile": "npm run clean && cross-env NODE_ENV=production babel src --ignore src/stories --out-dir dist && npm run copy-font && npm run copy-spec",
+    "compile": "npm run clean && tsc && npm run copy-font",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "storybook dev -p 6006",
@@ -79,6 +78,7 @@
     "@types/node": "^20.10.7",
     "@types/react": "^18.2.47",
     "@types/react-dom": "^18.2.18",
+    "@types/styled-components": "^5.1.36",
     "cross-env": "^7.0.3",
     "eslint-plugin-storybook": "^0.6.15",
     "gh-pages": "^6.1.1",
