--- a/babel.config.json
+++ b/babel.config.json
@@ -1,7 +1,7 @@
 {
   "presets": [
-    "@babel/preset-typescript",
+    ["@babel/preset-typescript", { "isTSX": true, "allExtensions": true }],
     "@babel/preset-env",
-    "@babel/preset-react"
+    ["@babel/preset-react", { "runtime": "automatic" }]
   ]
 }
